fix: ajuste no botao de dark mode

--- a/styles/style-header.css
+++ b/styles/style-header.css
@@ -74,53 +74,56 @@
     gap: 5px;
 }
 
-.space-btn{
-    width: 40%;
-    height: 25px;
+.checkbox{
+    opacity: 0;
+    position: absolute;
+}
+
+.label{
+    border-radius: 50px;
+    cursor: pointer;
     display: flex;
     align-items: center;
-    border-radius: 30px;
-    padding: 0 5px;
+    justify-content: space-between;
+    padding: 5px;
+    position: relative;
+    width: 50px;
+    height: 16px;
     transition: 0.5s;
 }
 
-.space-btn-light{
-    background-color: #222222;
-}
-
-.space-btn-dark{
+.label-dark{
     background-color: #FAFAFA;
 }
 
-#btn-mode{
+.label-light{
+    background-color: #222222;
+}
+
+.label .btn-label{
+    border-radius: 100%;
+    position: absolute;
     width: 18px;
     height: 18px;
-    border-radius: 100%;
     border: none;
     cursor: pointer;
+    transform: translateX(0);
     transition: 0.5s;
 }
 
-.btn-dark{
+.btn-label-dark{
     background-color: #222222;
 }
 
-.btn-light{
+.btn-label-light{
     background-color: #FAFAFA;
 }
 
-.posicao-btn-ligth{
-    display: flex;
-    justify-content: start;
+.checkbox:checked + .label .btn-label{
+    transform: translateX(32px);
 }
 
-.posicao-btn-dark{
-    display: flex;
-    justify-content: end;
-}
-
-
-@media screen and (max-width: 730px) {
+@media screen and (max-width: 950px) {
     .menu-desktop{
         display: none;
     }
